// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
Array [
  Object {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  Object {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  Object {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 7.2,
    "target": "samsung",
    "version": "7.2-7.4",
  },
  Object {
    "parsedVersion": 11.1,
    "target": "safari",
    "version": "11.1",
  },
  Object {
    "parsedVersion": 60,
    "target": "opera",
    "version": "60",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 12,
    "target": "ios_saf",
    "version": "12.0-12.1",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 68,
    "target": "firefox",
    "version": "68",
  },
  Object {
    "parsedVersion": 15,
    "target": "edge",
    "version": "15",
  },
  Object {
    "parsedVersion": 75,
    "target": "chrome",
    "version": "75",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 76,
    "target": "android",
    "version": "76",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 68,
    "target": "and_ff",
    "version": "68",
  },
  Object {
    "parsedVersion": 78,
    "target": "and_chr",
    "version": "78",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
Array [
  Object {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
Array [
  Object {
    "parsedVersion": 10.1,
    "target": "samsung",
    "version": "10.1",
  },
  Object {
    "parsedVersion": 13,
    "target": "safari",
    "version": "13",
  },
  Object {
    "parsedVersion": 64,
    "target": "opera",
    "version": "64",
  },
  Object {
    "parsedVersion": 46,
    "target": "op_mob",
    "version": "46",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 13.2,
    "target": "ios_saf",
    "version": "13.2",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie_mob",
    "version": "11",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 71,
    "target": "firefox",
    "version": "71",
  },
  Object {
    "parsedVersion": 18,
    "target": "edge",
    "version": "18",
  },
  Object {
    "parsedVersion": 78,
    "target": "chrome",
    "version": "78",
  },
  Object {
    "parsedVersion": 10,
    "target": "bb",
    "version": "10",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 76,
    "target": "android",
    "version": "76",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 68,
    "target": "and_ff",
    "version": "68",
  },
  Object {
    "parsedVersion": 78,
    "target": "and_chr",
    "version": "78",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 7.2,
    "target": "samsung",
    "version": "7.2-7.4",
  },
  Object {
    "parsedVersion": 11.1,
    "target": "safari",
    "version": "11.1",
  },
  Object {
    "parsedVersion": 60,
    "target": "opera",
    "version": "60",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 12,
    "target": "ios_saf",
    "version": "12.0-12.1",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 68,
    "target": "firefox",
    "version": "68",
  },
  Object {
    "parsedVersion": 15,
    "target": "edge",
    "version": "15",
  },
  Object {
    "parsedVersion": 69,
    "target": "chrome",
    "version": "69",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 76,
    "target": "android",
    "version": "76",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 68,
    "target": "and_ff",
    "version": "68",
  },
  Object {
    "parsedVersion": 78,
    "target": "and_chr",
    "version": "78",
  },
]
`;

exports[`Versioning should support single version config in browserslist package.json 1`] = `
Object {
  "0": Object {
    "parsedVersion": 8,
    "target": "safari",
    "version": "8",
  },
  "1": Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  "2": Object {
    "parsedVersion": 20,
    "target": "firefox",
    "version": "20",
  },
  "3": Object {
    "parsedVersion": 32,
    "target": "chrome",
    "version": "32",
  },
}
`;

exports[`Versioning should support string config in rule option 1`] = `
Array [
  Object {
    "parsedVersion": 9.2,
    "target": "samsung",
    "version": "9.2",
  },
  Object {
    "parsedVersion": 5.1,
    "target": "safari",
    "version": "5.1",
  },
  Object {
    "parsedVersion": 63,
    "target": "opera",
    "version": "63",
  },
  Object {
    "parsedVersion": 46,
    "target": "op_mob",
    "version": "46",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 12.2,
    "target": "ios_saf",
    "version": "12.2-12.4",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie_mob",
    "version": "11",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 68,
    "target": "firefox",
    "version": "68",
  },
  Object {
    "parsedVersion": 17,
    "target": "edge",
    "version": "17",
  },
  Object {
    "parsedVersion": 77,
    "target": "chrome",
    "version": "77",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 76,
    "target": "android",
    "version": "76",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 1.2,
    "target": "and_qq",
    "version": "1.2",
  },
  Object {
    "parsedVersion": 68,
    "target": "and_ff",
    "version": "68",
  },
  Object {
    "parsedVersion": 78,
    "target": "and_chr",
    "version": "78",
  },
]
`;
